@@ -3,6 +3,10 @@
 	* swank-sbcl-exts.lisp (compute-enriched-decoded-arglist): Filter
 	uninteresting arguments for SB-ASSEM:INST.
 
+2009-07-21  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-goo.goo, swank-jolt.k (create-repl): Implemented.
+
 2009-07-19  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-kawa.scm (operator-arglist): Implemented, at least for
